codegraph-vscode/grammar/test/corpus/test-corpus.txt
==================
Minimal view
==================

view "Hello" {
    component "hi" {
        type: list;
    }
}

---

(source_file
  (view_declaration
    (string)
    (view_body
      (component_declaration
        (string)
        (component_body
          (property_assignment
            key: (identifier)
            value: (value_expression
              (expression
                (identifier)))))))))

==================
Domain declaration
==================

domain "sales" {
    schema "sales";
}

---

(source_file
  (domain_declaration
    (string)
    (string)))

==================
View with params
==================

view "CustomerDetail" {
    params { customerId: Uuid };

    component "info" {
        type: details;
    }
}

---

(source_file
  (view_declaration
    (string)
    (view_body
      (params_block
        (parameter_block
          (parameter_decl
            name: (identifier)
            type: (type_ref))))
      (component_declaration
        (string)
        (component_body
          (property_assignment
            key: (identifier)
            value: (value_expression
              (expression
                (identifier)))))))))

==================
Event with navigate action and binding
==================

view "Test" {
    component "btn" {
        type: list;

        on select(row) -> navigate("Detail", {
            id: row.id
        });
    }
}

---

(source_file
  (view_declaration
    (string)
    (view_body
      (component_declaration
        (string)
        (component_body
          (property_assignment
            key: (identifier)
            value: (value_expression
              (expression
                (identifier))))
          (event_handler
            type: (event_type)
            (event_param
              (identifier))
            action: (event_action
              (navigate_action
                (string)
                (parameter_binding
                  (binding_pair
                    key: (identifier)
                    value: (expression
                      (field_expr
                        (identifier)
                        (identifier)))))))))))))

==================
Event with action invocation and nested handlers
==================

view "MyView" {
    component "form" {
        type: form;

        on save(values) -> action("UpdateCustomer", {
            on success -> navigate("CustomerDetail");
            on error -> stay;
        });
    }
}

---

(source_file
  (view_declaration
    (string)
    (view_body
      (component_declaration
        (string)
        (component_body
          (property_assignment
            key: (identifier)
            value: (value_expression
              (expression
                (identifier))))
          (event_handler
            type: (event_type)
            (event_param
              (identifier))
            action: (event_action
              (action_invocation
                (string)
                (action_body
                  (event_handler
                    type: (event_type
                      (identifier))
                    action: (event_action
                      (navigate_action
                        (string))))
                  (event_handler
                    type: (event_type
                      (identifier))
                    action: (event_action
                      (stay_statement))))))))))))

==================
C-like expression with comparison and field access
==================

view "SearchPage" {
    component "results" {
        type: list;
        filter: name ~= params.query;
    }
}

---

(source_file
  (view_declaration
    (string)
    (view_body
      (component_declaration
        (string)
        (component_body
          (property_assignment
            key: (identifier)
            value: (value_expression
              (expression
                (identifier))))
          (property_assignment
            key: (identifier)
            value: (value_expression
              (expression
                (identifier)
                (field_expr
                  (identifier)
                  (identifier))))))))))

==================
Comments and string escapes
==================

// top-level comment
view "Special\tChars" {
    // inline comment
    component "info" {
        type: details;
        title: "Hello \"World\"\nLine2";
    }
}

---

(source_file
  (comment)
  (view_declaration
    (string)
    (view_body
      (comment)
      (component_declaration
        (string)
        (component_body
          (property_assignment
            key: (identifier)
            value: (value_expression
              (expression
                (identifier))))
          (property_assignment
            key: (identifier)
            value: (value_expression
              (expression
                (string)))))))))

==================
Array property values
==================

view "Grid" {
    component "tbl" {
        type: list;
        fields: [name, email, phone];
    }
}

---

(source_file
  (view_declaration
    (string)
    (view_body
      (component_declaration
        (string)
        (component_body
          (property_assignment
            key: (identifier)
            value: (value_expression
              (expression
                (identifier))))
          (property_assignment
            key: (identifier)
            value: (value_expression
              (array_literal
                (value_expression
                  (expression
                    (identifier)))
                (value_expression
                  (expression
                    (identifier)))
                (value_expression
                  (expression
                    (identifier)))))))))))

==================
Position property (object literal)
==================

view "CustomerList" {
    position: { x: 100; y: 200 };
    component "grid" {
        type: list;
    }
}

---

(source_file
  (view_declaration
    (string)
    (view_body
      (property_assignment
        key: (identifier)
        value: (value_expression
          (object_literal
            (object_member
              key: (identifier)
              value: (object_member_value
                (expression
                  (number))))
            (object_member
              key: (identifier)
              value: (object_member_value
                (expression
                  (number)))))))
      (component_declaration
        (string)
        (component_body
          (property_assignment
            key: (identifier)
            value: (value_expression
              (expression
                (identifier)))))))))

==================
Container nesting
==================

view "Wizard" {
    xor: true;

    container "Step1" {
        default: true;

        component "form" {
            type: form;
        }
    }

    container "Step2" {
        component "display" {
            type: details;
        }
    }
}

---

(source_file
  (view_declaration
    (string)
    (view_body
      (property_assignment
        key: (identifier)
        value: (value_expression
          (expression
            (boolean))))
      (container_declaration
        (string)
        (view_body
          (property_assignment
            key: (identifier)
            value: (value_expression
              (expression
                (boolean))))
          (component_declaration
            (string)
            (component_body
              (property_assignment
                key: (identifier)
                value: (value_expression
                  (expression
                    (identifier))))))))
      (container_declaration
        (string)
        (view_body
          (component_declaration
            (string)
            (component_body
              (property_assignment
                key: (identifier)
                value: (value_expression
                  (expression
                    (identifier)))))))))))

==================
Label declaration
==================

view "CustomerList" {
    label "Customer Management";

    component "grid" {
        type: list;
    }
}

---

(source_file
  (view_declaration
    (string)
    (view_body
      (label_declaration
        (string))
      (component_declaration
        (string)
        (component_body
          (property_assignment
            key: (identifier)
            value: (value_expression
              (expression
                (identifier)))))))))

==================
Action declaration
==================

action "CreateCustomer" {
    on success -> navigate("CustomerList");
    on error -> stay;
}

---

(source_file
  (action_declaration
    (string)
    (action_body
      (event_handler
        type: (event_type
          (identifier))
        action: (event_action
          (navigate_action
            (string))))
      (event_handler
        type: (event_type
          (identifier))
        action: (event_action
          (stay_statement))))))

==================
Module declaration
==================

module "SearchWidget" {
    input { query: String }
    output { result: Uuid }
    component "searchBar" {
        type: form;
    }
}

---

(source_file
  (module_declaration
    (string)
    (parameter_block
      (parameter_decl
        name: (identifier)
        type: (type_ref)))
    (parameter_block
      (parameter_decl
        name: (identifier)
        type: (type_ref)))
    (component_declaration
      (string)
      (component_body
        (property_assignment
          key: (identifier)
          value: (value_expression
            (expression
              (identifier))))))))

==================
Landmark and boolean properties
==================

view "Dashboard" {
    landmark: true;

    component "chart" {
        type: list;
        data: Order;
    }

    on load -> refresh("chart");
}

---

(source_file
  (view_declaration
    (string)
    (view_body
      (property_assignment
        key: (identifier)
        value: (value_expression
          (expression
            (boolean))))
      (component_declaration
        (string)
        (component_body
          (property_assignment
            key: (identifier)
            value: (value_expression
              (expression
                (identifier))))
          (property_assignment
            key: (identifier)
            value: (value_expression
              (expression
                (identifier))))))
      (event_handler
        type: (event_type)
        action: (event_action
          (refresh_action
            (string)))))))

==================
Nested action body with properties
==================

view "EditView" {
    component "form" {
        mode: edit;

        on save(values) -> action("UpdateOrder", {
            body: values;
            on success -> navigate("Detail");
        });
    }
}

---

(source_file
  (view_declaration
    (string)
    (view_body
      (component_declaration
        (string)
        (component_body
          (property_assignment
            key: (identifier)
            value: (value_expression
              (expression
                (identifier))))
          (event_handler
            type: (event_type)
            (event_param
              (identifier))
            action: (event_action
              (action_invocation
                (string)
                (action_body
                  (property_assignment
                    key: (identifier)
                    value: (value_expression
                      (expression
                        (identifier))))
                  (event_handler
                    type: (event_type
                      (identifier))
                    action: (event_action
                      (navigate_action
                        (string)))))))))))))

==================
Stay statement
==================

view "Detail" {
    component "view" {
        on cancel -> stay;
    }
}

---

(source_file
  (view_declaration
    (string)
    (view_body
      (component_declaration
        (string)
        (component_body
          (event_handler
            type: (event_type)
            action: (event_action
              (stay_statement))))))))

==================
View-level event handler
==================

view "Dashboard" {
    on load -> refresh("recentOrders");

    component "recentOrders" {
        type: list;
    }
}

---

(source_file
  (view_declaration
    (string)
    (view_body
      (event_handler
        type: (event_type)
        action: (event_action
          (refresh_action
            (string))))
      (component_declaration
        (string)
        (component_body
          (property_assignment
            key: (identifier)
            value: (value_expression
              (expression
                (identifier)))))))))

==================
Field declarations
==================

view "CustomerForm" {
    component "form" {
        mode: edit;

        field name -> input text { required: true; validations: [len(name) > 2]; }
        field email -> input email;
        field status -> input dropdown { values: ["gold", "silver"]; }
    }
}

---

(source_file
  (view_declaration
    (string)
    (view_body
      (component_declaration
        (string)
        (component_body
          (property_assignment
            key: (identifier)
            value: (value_expression
              (expression
                (identifier))))
          (field_decl
            (identifier)
            (input_type)
            (input_body
              (property_assignment
                key: (identifier)
                value: (value_expression
                  (expression
                    (boolean))))
              (property_assignment
                key: (identifier)
                value: (value_expression
                  (array_literal
                    (value_expression
                      (expression
                        (call_expr
                          (identifier)
                          (expression
                            (identifier)))
                        (number))))))))
          (field_decl
            (identifier)
            (input_type))
          (field_decl
            (identifier)
            (input_type)
            (input_body
              (property_assignment
                key: (identifier)
                value: (value_expression
                  (array_literal
                    (value_expression
                      (expression
                        (string)))
                    (value_expression
                      (expression
                        (string)))))))))))))

==================
Column declarations
==================

view "CustomerGrid" {
    component "grid" {
        type: list;
        data: Customer;

        column "Name" -> field Customer.name;
        column "Status" -> lookup Customer.status via status_labels;
        column "Tenure" -> expr tenure_years(Customer.hire_date);
        column "Age" -> expr Customer.age >= 18;
    }
}

---

(source_file
  (view_declaration
    (string)
    (view_body
      (component_declaration
        (string)
        (component_body
          (property_assignment
            key: (identifier)
            value: (value_expression
              (expression
                (identifier))))
          (property_assignment
            key: (identifier)
            value: (value_expression
              (expression
                (identifier))))
          (column_decl
            (string)
            (field_ref
              (identifier)
              (identifier)))
          (column_decl
            (string)
            (lookup_ref
              (identifier)
              (identifier)
              (identifier)))
          (column_decl
            (string)
            (expr_ref
              (expression
                (call_expr
                  (identifier)
                  (expression
                    (field_expr
                      (identifier)
                      (identifier)))))))
          (column_decl
            (string)
            (expr_ref
              (expression
                (field_expr
                  (identifier)
                  (identifier))
                (number)))))))))

==================
Chart declarations
==================

view "Dashboard" {
    component "revenue" {
        type: list;

        chart bar;
        chart line { label: region; values: [revenue]; }
    }
}

---

(source_file
  (view_declaration
    (string)
    (view_body
      (component_declaration
        (string)
        (component_body
          (property_assignment
            key: (identifier)
            value: (value_expression
              (expression
                (identifier))))
          (chart_decl
            (chart_kind))
          (chart_decl
            (chart_kind)
            (chart_body
              (property_assignment
                key: (identifier)
                value: (value_expression
                  (expression
                    (identifier))))
              (property_assignment
                key: (identifier)
                value: (value_expression
                  (array_literal
                    (value_expression
                      (expression
                        (identifier)))))))))))))

==================
Condition guard in view body
==================

view "Guarded" {
    if data.enabled;

    component "c" {
        type: list;
    }
}

---

(source_file
  (view_declaration
    (string)
    (view_body
      (condition_statement
        (expression
          (field_expr
            (identifier)
            (identifier))))
      (component_declaration
        (string)
        (component_body
          (property_assignment
            key: (identifier)
            value: (value_expression
              (expression
                (identifier)))))))))

==================
Condition guard in component body
==================

view "V" {
    component "c" {
        type: list;

        if count > 0;
    }
}

---

(source_file
  (view_declaration
    (string)
    (view_body
      (component_declaration
        (string)
        (component_body
          (property_assignment
            key: (identifier)
            value: (value_expression
              (expression
                (identifier))))
          (condition_statement
            (expression
              (identifier)
              (number))))))))

==================
Module use statement
==================

view "V" {
    use "AuditTrail" as audit { scope: org; };

    use "Plain";
}

---

(source_file
  (view_declaration
    (string)
    (view_body
      (module_use_statement
        (string)
        (identifier)
        (module_use_body
          (property_assignment
            key: (identifier)
            value: (value_expression
              (expression
                (identifier))))))
      (module_use_statement
        (string)))))

==================
Actor declaration
==================

actor "Manager" {
    description: "Can approve";
    level: 3;
}

---

(source_file
  (actor_declaration
    (string)
    (property_assignment
      key: (identifier)
      value: (value_expression
        (expression
          (string))))
    (property_assignment
      key: (identifier)
      value: (value_expression
        (expression
          (number))))))

==================
Event handler with condition
==================

view "V" {
    component "c" {
        type: list;

        on select(row) if row.active -> navigate("Detail");
        on delete if confirm("Sure") == true -> stay;
    }
}

---

(source_file
  (view_declaration
    (string)
    (view_body
      (component_declaration
        (string)
        (component_body
          (property_assignment
            key: (identifier)
            value: (value_expression
              (expression
                (identifier))))
          (event_handler
            type: (event_type)
            (event_param
              (identifier))
            (event_condition
              (expression
                (field_expr
                  (identifier)
                  (identifier))))
            action: (event_action
              (navigate_action
                (string))))
          (event_handler
            type: (event_type)
            (event_condition
              (expression
                (call_expr
                  (identifier)
                  (expression
                    (string)))
                (boolean)))
            action: (event_action
              (stay_statement))))))))

==================
Parameter default values
==================

view "V" {
    params { limit: Int = 10, title: String = "Hello", flag: Boolean = true };

    component "c" {
        type: list;
    }
}

---

(source_file
  (view_declaration
    (string)
    (view_body
      (params_block
        (parameter_block
          (parameter_decl
            name: (identifier)
            type: (type_ref)
            default: (param_default
              (number)))
          (parameter_decl
            name: (identifier)
            type: (type_ref)
            default: (param_default
              (string)))
          (parameter_decl
            name: (identifier)
            type: (type_ref)
            default: (param_default
              (boolean)))))
      (component_declaration
        (string)
        (component_body
          (property_assignment
            key: (identifier)
            value: (value_expression
              (expression
                (identifier)))))))))

==================
Roles and messages arrays
==================

view "V" {
    roles: [manager, auditor];
    messages: ["Welcome"];
}

---

(source_file
  (view_declaration
    (string)
    (view_body
      (property_assignment
        key: (identifier)
        value: (value_expression
          (array_literal
            (value_expression
              (expression
                (identifier)))
            (value_expression
              (expression
                (identifier))))))
      (property_assignment
        key: (identifier)
        value: (value_expression
          (array_literal
            (value_expression
              (expression
                (string)))))))))
